<resources>
    <string name="app_name">journey</string>
    <string name="app_nameMay">Journey</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sample_text_header">Sample card header</string>
    <string name="sample_text_footer">Sample card footer</string>
    <string name="sample_text_image">Sample image</string>
    <string name="paquete">Paquete</string>
    <string name="registro">Registro</string>
    <string name="inicio">Inicio</string>
    <string name="ID">ID</string>
    <string name="nombre">Nombre</string>
    <string name="precio">Precio</string>
    <string name="duracion">Duración</string>
    <string name="descripcion">Descripción</string>
    <string name="calificacion">Calificación</string>
    <string name="imagen">Imagen</string>
    <string name="destino">Destino</string>
    <string name="confirm">Confirmar</string>
    <string name="no_paquetes">No hay Paquetes</string>
    <string name="editar_paquetes">Editar Paquetes</string>
    <string name="menu_insertar">Añadir Paquete</string>
    <string name="menu_borrar">Borrar Paquete</string>
    <string name="menu_listar_paquetes">Lista de Paquetes</string>

    <string name="tarjeta">Tarjeta</string>
    <string name="personas">Nº personas</string>
    <string name="pagador">Nombre pagador</string>
    <string name="comprar">Comprar</string>
    <string name="pass">Contraseña del Correo</string>

    <string name="action_filter">Filtrar</string>
    <string name="MenuAdministrador">Menu de Administrador</string>

    <string name="ver_info">Ver mas informacion</string>
    <string name="reenviar">Reenviar factura</string>
    <string name="compras">COMPRAS</string>
    <string name="no_compras">No hay compras</string>
    <string name="logout">Desconectar</string>
</resources>

