<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_margin="5dp"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        card_view:cardCornerRadius="0dp"
        card_view:cardBackgroundColor="#FFFFFF">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/sample_text_image"
            android:layout_gravity="top"
            android:src="@drawable/android"
            android:adjustViewBounds="false" />

        <TextView
            android:id="@+id/textViewNombre"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="start"
            android:layout_marginTop="90dp"
            android:padding="5dp"
            android:background="#80000000"
            android:textColor="#FFFFFF"
            android:text="@string/sample_text_header" />

        <TextView
            android:id="@+id/textViewDestino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="140dp"
            android:text="@string/sample_text_footer" />

        <TextView
            android:id="@+id/cardId"
            android:layout_width="0px"
            android:layout_height="0px"
            android:gravity="center"
            android:layout_marginTop="140dp"
            android:text="" />
    </android.support.v7.widget.CardView>

</LinearLayout>